--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -24,6 +24,10 @@
               <li><%= link_to category.name, category %></li>
             <% end %>
           </ul>
+         <li>
+          <%= link_to 'About Us', controller: '/about' %>
+          </li>
+      
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
