Add user authentication, edit schema to include both first name and last name, implement flash message on invalid login/signin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,15 @@
 
   <%= render 'layouts/top_nav' %>
 
+  
   <main class="container">
+  
+    <% flash.each do |type, msg| %>
+    <div>
+      <%= msg %>
+    </div>
+     <% end %>
+
     <%= yield %>
   </main>
 
