--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -27,10 +27,19 @@
          <li>
           <%= link_to 'About Us', controller: '/about' %>
           </li>
-      
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+
+         
+          <% if current_user %>
+                <li> <a> Signed in as <%= current_user.first_name %></a></li> 
+                <li><%= link_to "Logout", '/logout' %></li>
+                <% else %>
+                <li><%= link_to 'Login', '/login' %> </li>
+                <li><%= link_to 'Signup', '/signup' %></li>
+                <% end %>
+     
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
@@ -48,6 +57,7 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+
       </ul>
     </div>
   </div>
