--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
 
   
   <main class="container">
-  
     <% flash.each do |type, msg| %>
-    <div>
+  <div class="alert alert-info">
+  
       <%= msg %>
     </div>
      <% end %>
