--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -9,7 +9,7 @@
     <%= product.description %>
   </p>
   <footer class="actions">
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary' , method: :post do %>
+    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary add-item-button' , method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %>
     <% end %>
     <%= link_to product, class: 'btn btn-default pull-right' do %>
@@ -20,7 +20,8 @@
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
-     <% if product.quantity <=0 %>
+     <%# <% if product.quantity <=0 %>
+     <% if product.is_sold_out? %>
   <aside class="sold-out">
    <%=  "SOLD OUT!" %>
   </aside>
